<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsumptionCalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:padding="10dp"
            android:hint="@string/select"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_fuel_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumption_calc_desc"
            android:layout_gravity="center_horizontal"
            style="@style/textViewForm"
            />

        <EditText
            android:id="@+id/edit_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_km"
            android:inputType="number"
            android:maxLength="3"
            style="@style/editTextForm"/>

        <EditText
            android:id="@+id/edit_fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_fuel"
            android:inputType="numberDecimal"
            android:maxLength="5"
            style="@style/editTextForm"/>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:layout_gravity="center"
            style="@style/btnForm"/>

    </LinearLayout>

</ScrollView>